[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "Mopidy-Muse"
authors = [
    {name = "Cristian Brokate"},
]
description = "Mopidy interface with snapcast support"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
keywords = ["mopidy", "muse", "svelte"]
license = {file = "LICENSE"}
classifiers = [
    "Environment :: No Input/Output (Daemon)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio :: Players"
]
dependencies = [
    "Mopidy >= 3.0.0",
    "Pykka >= 2.0.1",
    "setuptools"
]
version = "0.0.33+7-g136be2f"

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
muse = "mopidy_muse:Extension"

[project.entry-points."mopidy.ext"]
muse = "mopidy_muse:Extension"

[project.urls]
Homepage = "https://cristianpb.github.io/blog/mopidy-muse"
Documentation = "https://github.com/cristianpb/muse"
Repository = "https://github.com/cristianpb/muse.git"
"Bug Tracker" = "https://github.com/cristianpb/muse/issues"
Changelog = "https://github.com/cristianpb/muse/blob/master/README.md"

[tool.black]
line-length = 80

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_tests = "tests"
sections = "FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,TESTS,LOCALFOLDER"
